--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/VegaBack
 excludes=
+file.reference.Proyecto-sapjco2_connecto=C:\\Users\\KEVINSANDOVALMADRIGA\\Documents\\Informatica\\Inge 2\\Proyecto\\sapjco2_connecto
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Proyecto-sapjco2_connecto}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
